--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+h2 {
+    margin-top: 4em;
+    margin-bottom: 1em;
+}
+
 #header-image {
     max-height: 37px;
 }
@@ -5,6 +10,26 @@
 .nav-link {
     font-size: 1.5em;
     margin-right: 3em;
-    color: white !important;
+    color: #FFF !important;
     font-weight: bold;
+}
+
+.nav-link:hover {
+    color: #000 !important;
+}
+
+#form {
+    text-align: center;
+}
+
+.form-control {
+    width: 40%;
+    text-align: center;
+    display: inline-flex;
+}
+
+@media (max-width: 973px) {
+    .form-control {
+        width: 60%;
+    }
 }
