--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    background: #8e9eab;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 h2 {
     margin-top: 4em;
     margin-bottom: 1em;
@@ -5,6 +11,17 @@ h2 {
 
 #header-img {
     max-height: 37px;
+}
+
+#submit {
+    font-weight: bold;
+}
+
+#nav-bar {
+    /* background-color: rgba(129, 159, 180, 0.8); */
+    background: rgba(129, 159, 180, 0.8);  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, rgba(129, 159, 180, 0.8), rgba(44, 62, 80, 0.8));  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, rgba(129, 159, 180, 0.8), rgba(44, 62, 80, 0.8)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .nav-link {
@@ -15,7 +32,7 @@ h2 {
 }
 
 .nav-link:hover {
-    color: #000 !important;
+    color: #819FB4 !important;
 }
 
 #form {
