--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: #8e9eab;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
@@ -45,8 +49,30 @@ h2 {
     display: inline-flex;
 }
 
+.naslov {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tekst h4 {
+    margin-bottom: 0;
+}
+
+.row {
+    justify-content: center;
+}
+
 @media (max-width: 973px) {
     .form-control {
         width: 60%;
+    }
+
+    .naslov {
+        display: none;
+    }
+
+    .tekst {
+        text-align: center;
     }
 }
