Add icons to features page

--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 3em;
+    color: #ffc107;
 }
 
 .tekst h4 {
