--- a/style.css
+++ b/style.css
@@ -65,13 +65,15 @@ h2 {
     justify-content: center;
 }
 
+#video {
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+}
+
 @media (max-width: 973px) {
     .form-control {
         width: 60%;
-    }
-
-    .naslov {
-        display: none;
     }
 
     .tekst {
