--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ h2 {
     margin-bottom: 1em;
 }
 
+footer {
+    text-align: center;
+    font-weight: 500;
+}
+
+footer a {
+    color: #0818c9;
+}
+
 #header-img {
     max-height: 37px;
 }
@@ -21,11 +30,21 @@ h2 {
     font-weight: bold;
 }
 
+#form {
+    text-align: center;
+}
+
 #nav-bar {
     /* background-color: rgba(129, 159, 180, 0.8); */
     background: rgba(129, 159, 180, 0.8);  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, rgba(129, 159, 180, 0.8), rgba(44, 62, 80, 0.8));  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, rgba(129, 159, 180, 0.8), rgba(44, 62, 80, 0.8)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+#video {
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
 }
 
 .nav-link {
@@ -37,10 +56,6 @@ h2 {
 
 .nav-link:hover {
     color: #819FB4 !important;
-}
-
-#form {
-    text-align: center;
 }
 
 .form-control {
@@ -65,16 +80,15 @@ h2 {
     justify-content: center;
 }
 
-#video {
-    display: flex;
-    justify-content: center;
-    margin-top: 5%;
-}
-
 .pricetext {
     text-align: center;
     display: flex;
     justify-content: center;
+    margin-top: 10%;
+}
+
+.card-header {
+    font-weight: 700;
 }
 
 @media (max-width: 973px) {
